--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-6-rest-mvc
 spring.flyway.enabled=false
-spring.security.user.name=user1
-spring.security.user.password=password
-logging.level.org.springframework.security = trace
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:9000
+#logging.level.org.springframework.security = trace
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
