--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring-6-rest-mvc
 spring.flyway.enabled=false
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:9000
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 #logging.level.org.springframework.security = trace
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
